--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
      
-    <title>Store all favourite movies at one place.</title>
+    <title>Store all your favourite movies at one place.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
