--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,13 @@
     />
      
     <title>Store all your favourite movies at one place.</title>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
+    <div id="fb-root"></div>
+<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -37,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0&appId=409474863002414&autoLogAppEvents=1"></script>
   </body>
 </html>
